--- a/css/passChange.css
+++ b/css/passChange.css
@@ -6,7 +6,7 @@
 }
 
 body {
-	background-color: #dfe4ea;
+	background-color:#dfe4ea;
 	font-family: 'Open Sans', sans-serif;
 	display: flex;
 	align-items: center;
@@ -14,7 +14,103 @@ body {
 	min-height: 100vh;
 	margin: 0;
 }
+/*=========================== NAV bar =========================== */
+.container1 {
+    width: 95%;
+    height: auto;
+    margin: auto;
+}
 
+nav {
+    width: 100%;
+    height: 80px;
+    background: linear-gradient(#fff, #dfe4ea);
+    position: fixed;
+    /* z-index: 1; */
+}
+
+.list {
+    float: left;
+    display: block;
+}
+
+.list::after {
+    content: "";
+    clear: both;
+}
+
+.list>ul {
+    list-style: none;
+    margin: 0;
+}
+
+.list ul li {
+    display: inline-block;
+    padding: 30px 10px;
+    margin-right: 15px;
+}
+
+.list ul li a {
+    color: #252525;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 3px;
+    line-height: 60px;
+    padding: 0 10px;
+}
+
+.list ul li a::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #000;
+    margin-left: 10px;
+    transition: width .3s;
+}
+
+.list ul li a:hover::after {
+    width: 90%;
+}
+
+.regLogin {
+    position: absolute;
+    top: 17px;
+    right: 15px;
+    text-transform: uppercase;
+    padding: 14px 10px;
+    /* display: none; */
+}
+
+.regLogin a,
+.logout a {
+    color: #0011fc;
+    padding: 0 10px;
+    font-size: 15px;
+    font-weight: bold;
+    /* border: 1px solid #5fa8d3; */
+    padding: 10px;
+}
+
+.regLogin a:hover,
+.logout a:hover {
+    color: #5fa8d3;
+    transform: translate3D(0, 0, 0);
+}
+
+.logout {
+    position: absolute;
+    top: 17px;
+    right: 15px;
+    text-transform: uppercase;
+    padding: 14px 10px;
+    visibility: hidden;
+}
+/* ==================== */
+.menu-show {
+    display: none;
+}
+/* ============================================================================ */
 .container {
 	background-color: #fff;
 	border-radius: 10px;
@@ -116,3 +212,6 @@ body {
 	margin-top: 20px;
 	width: 100%;
 }
+
+
+
