--- a/css/style.css
+++ b/css/style.css
@@ -79,18 +79,24 @@ nav {
     font-weight: bold;
     /* border: 1px solid #5fa8d3; */
     padding: 10px;
+    transition: 1s ease-in-out;
 }
 .regLogin a:hover,
-.logout a:hover {
-    color: #5fa8d3;
-    transform: translate3D(0, 0, 0);
+.logout a:hover{
+    color: #ffa600;
+}
+.logout:hover {
+    transition: 1s ease-in-out;
+    border: 1px solid #ffa600;
 }
 .logout {
     position: absolute;
     top: 17px;
     right: 15px;
     text-transform: uppercase;
-    padding: 14px 10px;
+    padding: 10px 10px;
+    border: 2px solid #0011fc;
+    border-radius: 5px;
     /* display: none; */
 }
 /* =========Search box====== */
@@ -622,7 +628,7 @@ input[type="number"] {
     }
     .profile_pic {
         position: relative;
-        top: -180px;
+        top: -140px;
         left: 0;
     }
     .about {
