--- a/css/trainee.css
+++ b/css/trainee.css
@@ -235,23 +235,37 @@ nav {
 } 
 /* ============================================================= */
 .input {
-    margin: 10px;
+    margin: 10px 0;
     border: none;
     outline: none;
-    width: 320px;
-    height: 30px;
+    width: 80%;
+    height: 40px;
+    font-size: 17px;
+    border-bottom: 1px solid #ccc;
+    border-radius: 5px;
+    padding-left: 10px
+}
+label{
+    font-weight: bold;
+    /* font-size: 17px; */
 }
 .editicon {
     position: relative;
-    left: 300px;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 20px;
     cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 114px;
+    opacity: 0.4;
+}
+.editicon:hover{
+    opacity: 1;
 }
 .content {
-    margin-left: 370px;
-    font-weight: normal;
-    width: 300px;
+    position: relative;
+    margin-left: 315px;
+    width: 500px;
     text-align: justif;
 }
 .buttonsup {
@@ -280,11 +294,13 @@ figure {
     box-shadow: 0 5px 10px #ccc;
     float: left;
 }
+form{
+    margin-bottom: 8px;
+}
 .button {
-    background-color: rgb(84, 134, 243);
-    /* Green */
+    background-color: #3140c4;
     border: none;
-    margin: 2px;
+    margin: 5px 0;
     color: white;
     padding: 10px 10px;
     text-align: center;
@@ -292,9 +308,12 @@ figure {
     display: inline-block;
     font-size: 15px;
     cursor: pointer;
-    -webkit-transition-duration: 0.4s;
-    /* Safari */
     transition-duration: 0.4s;
+    width: 80%;
+    border-radius: 5px;
+}
+.button a{
+    color: #fff;
 }
 .button2:hover {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
