--- a/css/passChange.css
+++ b/css/passChange.css
@@ -15,7 +15,7 @@ body {
 	margin: 0;
 }
 .container {
-	background-color: #fff;
+	background-color: red;
 	border-radius: 10px;
 	box-shadow: 0 20px 25px rgba(0, 0, 0, 0.3);
 	overflow: hidden;
