--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ hr {
 .content label {
     font-family: serif;
     font-style: italic;
-    margin-left: 70px;
+    /* margin-left: 70px; */
 }
 .content p {
     width: 95%;
@@ -216,22 +216,23 @@ hr {
     white-space: nowrap; 
     text-overflow: ellipsis;
 }
-.content span {
-    float: right;
+.content button, #enroll, #dropout {
+    /* float: right; */
     font-size: 11pt;
     position: absolute;
     bottom: 15px;
     right: 3px;
-    font-weight: 900;
-    border: 2px solid #0034f3;
-    padding: 5px 30%;
+    font-weight: bold;
+    /* border: 2px solid #0034f3; */
+    padding: 5px 28%;
     border-radius: 7px;
     width: 97%;
     background: #0034f3;
-}
-.content span a{
     color: #fff;
+    cursor: pointer;
+    outline: none;
 }
+
 .show_courses{
     width: 100%;
     height: 50px;
@@ -282,6 +283,7 @@ figure {
 }
 .profile_pic {
     width: 242px;
+    /* height: 395px; */
     background: #fff;
     position: relative;
     top: -110px;
@@ -299,7 +301,6 @@ figure {
     width: 200px;
     height: 200px;
     margin: 15px 0px 0px 20px;
-    ;
 }
 .profile_pic .ngo_url {
     text-align: center;
@@ -309,7 +310,7 @@ figure {
 }
 .profile_pic .ul {
     font-weight: normal;
-    margin: 10px 15px;
+    margin: 0px 15px;
     font-style: italic;
     font-size: 10pt;
 }
